...
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartTitle2" />

    <!-- Get Started Button -->
    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#F88379"
        android:paddingVertical="12dp"
        android:text="Get Started"
...
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:text="Already have an account?"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvStartLogin"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <TextView
        android:id="@+id/tvStartLogin"
...
