<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profileFragmentt"
        android:enabled="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notificationsFragment"
        android:enabled="true"
        android:icon="@drawable/outline_notifications_24"
        android:title="Notifications"
        android:iconTint="@drawable/icon_hover"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/outline_app_settings_alt_24"
        android:title="Settings"
        android:iconTint="@drawable/icon_hover"
        app:showAsAction="ifRoom" />
</menu>